--- a/packages/jukboks-frontend/src/global.css
+++ b/packages/jukboks-frontend/src/global.css
@@ -13,6 +13,8 @@ body {
   padding: 0px;
   box-sizing: border-box;
   font-family: "Courier Prime", monospace;
+  font-style: normal;
+  font-weight: normal;
 }
 
 a {
