fix clawn moves

--- a/packages/jukboks-frontend/src/global.css
+++ b/packages/jukboks-frontend/src/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap");
 
 html,
 body {
